Fix: Adjust search bar width and select dropdown spacing

--- a/assets/css/entries.css
+++ b/assets/css/entries.css
@@ -27,8 +27,10 @@
 }
 
 .atlaspress-topbar select {
-    min-width: 200px;
+    min-width: 220px;
+    max-width: 300px;
     height: 36px;
+    padding-right: 32px;
 }
 
 .atlaspress-topbar-actions {
@@ -51,12 +53,14 @@
 
 .atlaspress-searchbar input {
     flex: 1;
+    max-width: 400px;
     height: 36px;
 }
 
 .atlaspress-searchbar select {
-    width: 150px;
+    width: 180px;
     height: 36px;
+    padding-right: 32px;
 }
 
 /* Content Box */
